fix: fix some padding and overflow space

--- a/src/assets/styles/_main.scss
+++ b/src/assets/styles/_main.scss
@@ -46,7 +46,7 @@ html,
   background: var(--color-border);
 }
 
-.card {
+.main-card {
   background: white;
   border-radius: 20px;
   border: 2px solid var(--color-border);
