--- a/src/components/Base/Frame/BaseFrame.scss
+++ b/src/components/Base/Frame/BaseFrame.scss
@@ -1,11 +1,15 @@
 .base-frame {
   height: 100%;
-  padding: 0 36px;
+  padding: 0 16px;
   display: flex;
   flex-direction: column;
 
+  @media screen and (min-width: 1024px) {
+    padding: 0 36px;
+  }
+
   .header {
-    height: 108px;
+    height: 94px;
     display: flex;
     justify-content: space-between;
     align-items: center;
